css/main.css
/* * Lazy CSS reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100vh;
    width: 100vw;
    max-height: 100vh;
    max-width: 100vw;
    /* overflow: hidden; */
    background-color: #121212;
}


/* * Navigation */
#navbar {
    position: relative;
    height: 8%;
    background-color: #212121;
}

#logo-link {
    height: 50%;
    position: absolute;
    top: 50%;
    left: 30px;
    transform: translateY(-50%);
}

#logo {
    height: 100%;
}

#search {
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 60%;
    overflow: hidden;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
    /* -webkit-appearance: none; */
}

#search input[type="search"] {
    display: inline-block;
    height: 100%;
    width: 350px;
    padding: 0 10px;
    color: #b3b3b3;
    border: 0;
    /* outline: none; */
    background-color: #121212;
}

#search input[type="search"]:focus {
    outline-color: #1db954;
}

#search .search_icon {
    display: inline-block;
    height: 100%;
    width: 40px;
    float: right;
    background-color: #535353;
}

#login {
    height: 50%;
    position: absolute;
    top: 50%;
    right: 30px;
    transform: translateY(-50%);

    color: #1db954;
    font-size: 20px;
    line-height: 30px;
    font-family: sans-serif;
    font-weight: 700;
    text-decoration: none;
}


/* * Panels */
#panels-container {
    position: relative;
    height: 84%;
    overflow: hidden;
    z-index: 0;
}

.panel {
    border-radius: 25px;
    /* height: 65%;
    width: 25vh; */
    height: 80%;
    width: 30%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-position: center;
    background-size: cover;
    overflow: hidden;
    z-index: 5;
    cursor: pointer;
    transform: translate(-50%, -50%) perspective(1500px) scale(1) rotateY(0deg);
}

.panel-left {
    z-index: 10;
    left: 30%;
    transform: translate(-50%, -50%) perspective(1500px) scale(0.8) rotateY(25deg);
    transition: all 0.3s ease-in-out;
    filter: blur(4px);
}

.panel-right {
    z-index: 5;
    left: 70%;
    transform: translate(-50%, -50%) perspective(1500px) scale(0.8) rotateY(-25deg);
    transition: all 0.3s ease-in-out;
    filter: blur(4px);
}

.panel > img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 110%;
}

#panel-shadow {
    content: "";
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-position: center;
    background-size: cover;
    filter: blur(20px);
    opacity: 0.6;
    background-image: url("../assets/images/test_cover2.jpg");
    z-index: 14;

    border-radius: 25px;
    height: 80%;
    width: 30%;
    background-position: center;
    background-size: cover;
    overflow: hidden;
}

.panel_details {
    display: none;
}

#panel-curr {
    overflow: hidden;
    /* height: 80%;
    width: 30vh; */
    z-index: 15;
}

/* * Details & Controls Container */
.controls {
    height: 8%;
    padding: 0 20%;
    background-color: #212121;
    overflow: hidden;
}

.controls_slider {
    position: relative;
    display: flex;
    height: 30%;
    align-items: center;
}

.controls_slider-slide {
    position: relative;
    border-radius: 5px;
    width: 100%;
    height: 5px;
    margin: auto;
    background: #535353;
}

.controls_slider-slide::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    height: 80%;
    width: 50%;
    background-color: #b3b3b3;
    border-radius: 5px;
}

.controls_slider-slide--hover::before {
    content: "";
    background-color: #1db954;
}

.controls_slider-slide--hover::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 15px;
    width: 15px;
    background-color: #b3b3b3;
    border-radius: 50%;
}

.controls_slider-currTime {
    display: none;
}

.controls_slider-timeLeft {
    display: none;
}

.controls_actions {
    height: 70%;
    clear: both;
}

.icon {
    font-size: 20px;
    font-weight: 100;
    color: rgb(179, 179, 179, 0.5);
    transition: all 0.1s ease-in;
}

.icon:hover {
    color: rgb(179, 179, 179, 1);
}

.controls-icon {
    display: flex !important;
    align-items: center;
}

.controls-icon::before {
    margin: auto;
}

.controls_actions-shuffle {
    height: 100%;
    width: 20%;
    float: left;
}

.controls_actions-generic {
    position: relative;
    height: 100%;
    width: 60%;
    float: left;
}

.controls_actions-prev {
    position: absolute;
    top: 50%;
    left: 40%;
    transform: translateY(-50%);
}

.controls_actions-toggle {
    position: absolute;
    height: 40px;
    width: 40px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 2px solid rgb(179, 179, 179, 0.5);
    border-radius: 100%;
    color: rgb(179, 179, 179, 0.5);
    transition: all 0.1s ease-in;
}

.controls_actions-toggle:hover {
    height: 45px;
    width: 45px;
}

.controls_actions-toggle::before {
    content: '\e802';
    font-family: "fontello";
    font-weight: 100;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 55%;
    transform: translate(-50%, -50%);
}

.controls_actions-toggle:hover {
    color: rgb(179, 179, 179, 1);
    border: 2px solid rgb(179, 179, 179, 1);
}

.controls_actions-toggle::after {
    content: "";
}

.controls_actions-next {
    position: absolute;
    top: 50%;
    right: 40%;
    transform: translateY(-50%);
}

.controls_actions-repeat {
    height: 100%;
    width: 20%;
    float: left;
}

